# ai-speech-trainer

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
data/: default.txt
data/references/can-we-move-this-meeting-to-next-wednesday/: metadata.json
data/references/can-you-walk-me-through-your-approach/: metadata.json
data/references/could-you-clarify-what-you-mean-by-that/: metadata.json
data/references/could-you-please-send-me-the-meeting-agenda/: metadata.json
data/references/could-you-review-my-pull-request-when-you-have-a-m/: metadata.json
data/references/does-anyone-have-any-questions-before-we-wrap-up/: metadata.json
data/references/hello-world/: metadata.json
data/references/hi-i-am-a-software-engineer-and-i-recently-joined/: metadata.json
data/references/how-are-you-doing-today/: metadata.json
data/references/how-was-your-weekend-did-you-do-anything-fun/: metadata.json
data/references/i-agree-with-your-point-but-i-have-a-small-concern/: metadata.json
data/references/i-am-going-to-be-out-of-the-office-tomorrow/: metadata.json
data/references/i-am-not-sure-i-understand-could-you-explain-it-ag/: metadata.json
data/references/i-am-running-a-few-minutes-late-please-start-witho/: metadata.json
data/references/i-d-like-to-follow-up-on-the-action-items-from-our/: metadata.json
data/references/i-heard-you-got-a-promotion-congratulations/: metadata.json
data/references/i-think-we-should-prioritize-the-most-critical-iss/: metadata.json
data/references/i-will-send-out-a-summary-by-the-end-of-the-day/: metadata.json
data/references/let-me-share-my-screen-so-everyone-can-see/: metadata.json
data/references/let-s-keep-in-touch-after-the-project-ends/: metadata.json
data/references/let-s-schedule-a-quick-call-to-discuss-this/: metadata.json
data/references/let-us-circle-back-to-this-after-we-gather-more-da/: metadata.json
data/references/record-an-attempt-and-click-evaluate-to-see-scores/: metadata.json
data/references/speech-shadowing-helps-you-sound-like-a-native-spe/: metadata.json
data/references/thank-you-for-your-hard-work-on-this-project/: metadata.json
data/references/that-sounds-like-a-great-idea-how-can-i-help/: metadata.json
data/references/the-deployment-failed-but-i-have-already-rolled-it/: metadata.json
data/references/the-quick-brown-fox-jumps-over-the-lazy-dog/: metadata.json
data/references/the-weather-has-been-really-nice-lately-hasn-t-it/: metadata.json
data/references/we-need-to-push-the-deadline-back-by-two-days/: metadata.json
data/references/would-you-like-to-grab-coffee-after-the-meeting/: metadata.json
docker/: nginx.conf  supervisord.conf
docs/: README.md  audio-preprocessing.md  cli.md  db.md  docker.md  elsa-comparison.md  feedback-scoring.md  fluency-timing.md  phoneme-extraction.md  pitch-prosody.md  rest-api.md  tts-reference.md
examples/: README.md  long-passage.md  long-report.json  long-report.md  long-report.terminal.txt  report.json  report.md  report.terminal.txt
scripts/: README.md  bench_api.py  prewarm_models.py  serve.sh  test_e2e.py
src/ai_speech_shadowing/: __init__.py  cli.py
src/ai_speech_shadowing/api/: __init__.py  (+4 more)
static/: index.html
tests/: conftest.py  test_api.py  test_audio.py  test_cli.py  test_feedback.py  test_fluency.py  test_g2p.py  test_history.py  test_leaderboard.py  test_phoneme.py  test_preprocess.py  test_prosody.py  test_tts.py  test_wordalign.py
(+19 files in other folders)
