[project]
name = "ai-speech-shadowing"
version = "0.1.0"
description = "Local-first speech shadowing evaluation engine: pronunciation, prosody, and fluency feedback."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Quan Hua", email = "quanhua92@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.138.0",
    "fastdtw>=0.3.4",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "praat-parselmouth>=0.4.7",
    "python-multipart>=0.0.32",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
ai-speech-shadowing = "ai_speech_shadowing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests that download/load ML models (run with --runslow)",
]
