[project]
name = "ai-speech-shadowing"
version = "0.1.0"
description = "Local-first speech shadowing evaluation engine: pronunciation, prosody, and fluency feedback."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Quan Hua", email = "quanhua92@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # spaCy model misaki's G2P needs at runtime (TTS + word alignment). NOT on
    # PyPI — installed from the spaCy-models GitHub release. Baked via uv sync
    # so misaki never calls spacy.cli.download at runtime (which fails offline
    # / non-root: uv venvs ship no pip). Pinned to 3.8.0 to match spacy 3.8.x.
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastapi>=0.138.0",
    "fastdtw>=0.3.4",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "praat-parselmouth>=0.4.7",
    "python-multipart>=0.0.32",
    "rich>=13.0.0",
    "scipy>=1.18.0",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
cli = ["sounddevice>=0.5.5"]

[project.scripts]
ai-speech-shadowing = "ai_speech_shadowing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# en-core-web-sm (the spaCy model misaki needs) is a direct-URL dependency —
# spaCy models aren't on PyPI, only on the spaCy-models GitHub releases.
# Hatchling requires this flag to accept PEP 508 direct references.
allow-direct-references = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests that download/load ML models (run with --runslow)",
]
